<resources>
    <string name="app_name">PracticaLogin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Log In</string>
    <string name="second_fragment_label">Sig IN</string>
    <string name="third_fragment_label">I.E.S Zaidín Vergeles</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">E-mail</string>
    <string name="ivLogo">IZV Logo</string>
    <string name="btLogin">Log In</string>
    <string name="btSignin">Sig in</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome!</string>

</resources>